Bug 46346 - X server crashes very often when switching virtual desktops
Summary: X server crashes very often when switching virtual desktops
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-20 07:15 UTC by Joe Nahmias
Modified: 2012-02-21 07:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
GDB backtrace (5.28 KB, text/plain)
2012-02-20 07:15 UTC, Joe Nahmias
no flags Details
X logfile from crash (60.29 KB, text/plain)
2012-02-20 07:16 UTC, Joe Nahmias
no flags Details
Backtrace while running with --enable-debug (3.55 KB, text/plain)
2012-02-20 15:24 UTC, Joe Nahmias
no flags Details

Description Joe Nahmias 2012-02-20 07:15:38 UTC
Created attachment 57322 [details]
GDB backtrace

Hello,

X keeps crashing on a pretty regular basis.  It happens a lot when I switch virtual desktops in Xfce, but also happens on other repaint events.  See attached logfile and gdb backtrace.  I'm running Debian with kernel 3.2.6, updated intel driver from git to commit 95391b7312.

Please let me know if you need additional info.
--Joe
Comment 1 Joe Nahmias 2012-02-20 07:16:27 UTC
Created attachment 57323 [details]
X logfile from crash
Comment 2 Chris Wilson 2012-02-20 07:45:12 UTC
If you are able to reproduce this fairly reliably, then please recompile with ./configure --enable-debug

That should hopefully trap the actual error with an assert, so be prepared. However, it is likely to be fixed with the recent changes to handling of XPolyLine.
Comment 3 Joe Nahmias 2012-02-20 15:24:09 UTC
Created attachment 57368 [details]
Backtrace while running with --enable-debug

Here's the backtrace running the driver with --enable-debug.
Comment 4 Chris Wilson 2012-02-20 16:04:58 UTC
The only possible explanation for that assertion failure that I could see was:

commit 7ea44997553ffdf57b346dc9d83742c511c9e5a4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Feb 20 23:50:42 2012 +0000

    sna: Restore the shadow pixels when reducing CPU damage to all
    
    Reported-by: Joe Nahmias <joe@nahmias.net>
    References: https://bugs.freedesktop.org/show_bug.cgi?id=46346
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Can you please update and continue running with assertions enabled and see if anything else is caught? Thanks.
Comment 5 Joe Nahmias 2012-02-20 19:34:28 UTC
That seems to have fixed something.  After playing around for ten or
fifteen minutes it hasn't crashed on me.

Thanks,
--Joe

On Tue, Feb 21, 2012 at 12:04:58AM +0000, bugzilla-daemon@freedesktop.org wrote:
> https://bugs.freedesktop.org/show_bug.cgi?id=46346
> 
> --- Comment #4 from Chris Wilson <chris@chris-wilson.co.uk> 2012-02-20 16:04:58 PST ---
> The only possible explanation for that assertion failure that I could see was:
> 
> commit 7ea44997553ffdf57b346dc9d83742c511c9e5a4
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Mon Feb 20 23:50:42 2012 +0000
> 
>     sna: Restore the shadow pixels when reducing CPU damage to all
> 
>     Reported-by: Joe Nahmias <joe@nahmias.net>
>     References: https://bugs.freedesktop.org/show_bug.cgi?id=46346
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
> 
> Can you please update and continue running with assertions enabled and see if
> anything else is caught? Thanks.
> 
> -- 
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 6 Chris Wilson 2012-02-21 07:00:14 UTC
I shall consider the immediate problem fixed. Please do open bug reports for any problems you encounter, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.