sna: Restore the shadow pixels when reducing CPU damage to all

Reported-by: Joe Nahmias <joe@nahmias.net>
References: https://bugs.freedesktop.org/show_bug.cgi?id=46346
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>